# Predicci-n-precio-de-propiedades

./: .gitignore  Dockerfile  README.md  TP_individual.ipynb  TP_individual_docker.ipynb  a_predecir.csv  docker-compose.yml  pyproject.toml  requirements.txt  v1_solucion.csv
.ipynb_checkpoints/: TP_individual-checkpoint.ipynb
Soluciones/: v2_solucion.csv  v3_solucion.csv  v3bis_solucion.csv
notebook/: BARRIOS.ipynb  Normailzado.ipynb  TP_individual.ipynb  TP_individual_docker.ipynb  TP_individual_docker_v5_remaster.ipynb  set de prueba.ipynb  solo title.ipynb
