[tool.poetry]
name = "properati"
version = "0.0.1"
description = "Prediccion de precios propiedades CABA"
authors = ["Nicolas N Manzano <nico.nm30@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"
ipykernel = "^6.13.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
